1998-12-06  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Recognice OpenBSD as a valid
	system and use the `freebsd' sysdeps directory for it.

Sat Dec  5 23:30:01 PST 1998 Manish Singh <yosh@gimp.org>

	* gnome-guile-checks.m4: clear GUILE_LIBS and GUILE_INCS if
	guile isn't there (quick fix)

1998-12-05  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: Recognice NetBSD as a valid
	system and use the `freebsd' sysdeps directory for it.

1998-12-03  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GLIBTOP_LINUX_VERSION_CODE):
	Define this to be the same as LINUX_VERSION_CODE either from
	<linux/version.h> or from the running kernel.

1998-12-02  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: "Improve" indentation and messages somewhat.

1998-12-01  Jeff Garzik  <jgarzik@pobox.com>

	* autogen.sh:
	Platform fixes.  grep -q is not portable, do not use.

1998-12-01  Changwoo Ryu  <cwryu@adam.kaist.ac.kr>

	* autogen.sh: Run gettextize if needed.
	: Run libtoolize only if configure.in has "^AM_PROG_LIBTOOL".

1998-11-30  Jeff Garzik  <jgarzik@pobox.com>

	* gnome.m4: Re-arranged tests such that "--without-gnome" is
	fully supported.  Not only is the logic now correct, programs
	can test "want_gnome=yes/no" for the results of this arg.

1998-11-27  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4: All parts of GNOME will now require
	LibGTop >= 0.29.0 which is the latest version from CVS.

1998-11-20  James Henstridge  <james@daa.com.au>

	* gnome.m4(GNOME_INIT_HOOK): Changed the call to GNOME_GNORBA_CHECK
	to GNOME_GNORBA_HOOK([],$2).  Before if you specified that the
	macro should not exit on errors, and you didn't have ORBit, the
	script would fail anyway.

1998-11-17  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4: We need to check for <net/if_var.h>
	and conditionally include it before <net/if_isppp.h> in the code